# bokeh-django

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: github-actions-demo.yml  main.yml
bokeh_django/: __init__.py  apps.py  consumers.py  routing.py  static.py
conda.recipe/: meta.yaml
examples/django_embed/: README.md
examples/django_embed/bokeh_apps/: sea_surface.py
examples/django_embed/django_embed/: asgi.py  settings.py  shape_viewer.py  urls.py  views.py
examples/django_embed/django_embed/templates/: index.html
