# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bokeh-django"
version = "0.2.1"
description = "Utility to integrate Bokeh with Django Channels"
readme = "README.md"
authors = [
    { name = "Bokeh Team", email = "info@bokeh.org" },
]
license = { file = "LICENCE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Bokeh", "Django", "Channels", "web", "visualization"]
dependencies = [
    "bokeh",
    "django",
    "channels",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/bokeh/bokeh-django"
